# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpcost/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libnaucrates/include)

# Generate version-number header.
configure_file(version.h.in
        ${PROJECT_BINARY_DIR}/libgpopt/include/libgpopt/version.h)

# for the generated config.h file.
include_directories(${PROJECT_BINARY_DIR}/libgpos/include/)

add_library(gpopt
            include/gpopt/base/CDistributionSpec.h
            include/gpopt/base/CDistributionSpecAny.h
            include/gpopt/base/CDrvdPropCtxtRelational.h
            include/gpopt/base/CDrvdPropCtxtScalar.h
            include/gpopt/base/CMaxCard.h
            include/gpopt/base/CPropSpec.h
            include/gpopt/base/CStateMachine.h
            include/gpopt/base/CUtils.inl
            include/gpopt/base/IComparator.h
            include/gpopt/cost/CCost.h
            include/gpopt/cost/ICostModel.h
            include/gpopt/cost/ICostModelParams.h
            include/gpopt/engine/CCTEConfig.h
            include/gpopt/engine/CHint.h
            include/gpopt/eval/IConstDXLNodeEvaluator.h
            include/gpopt/eval/IConstExprEvaluator.h
            include/gpopt/mdcache/CAutoMDAccessor.h
            include/gpopt/operators/CPatternLeaf.h
            include/gpopt/operators/CPatternMultiLeaf.h
            include/gpopt/operators/CPatternMultiTree.h
            include/gpopt/operators/CPatternTree.h
            include/gpopt/operators/CPhysicalCorrelatedInLeftSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedInnerNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftAntiSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftOuterNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedLeftSemiNLJoin.h
            include/gpopt/operators/CPhysicalCorrelatedNotInLeftAntiSemiNLJoin.h
            include/gpopt/operators/CPhysicalLeftAntiSemiNLJoinNotIn.h
            include/gpopt/operators/CScalarIsDistinctFrom.h
            include/gpopt/operators/CScalarSubqueryExists.h
            include/gpopt/operators/CScalarSubqueryNotExists.h
            include/gpopt/operators/ops.h
            include/gpopt/search/CJobStateMachine.h
            include/gpopt/search/CTreeMap.h
            include/gpopt/spinlock.h
            include/gpopt/xforms/CXformAntiSemiJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinInnerJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInInnerJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinNotInSemiJoinSwap.h
            include/gpopt/xforms/CXformAntiSemiJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformApply2Join.h
            include/gpopt/xforms/CXformContext.h
            include/gpopt/xforms/CXformImplementCorrelatedApply.h
            include/gpopt/xforms/CXformImplementInnerCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftAntiSemiCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftAntiSemiCorrelatedApplyNotIn.h
            include/gpopt/xforms/CXformImplementLeftOuterCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftSemiCorrelatedApply.h
            include/gpopt/xforms/CXformImplementLeftSemiCorrelatedApplyIn.h
            include/gpopt/xforms/CXformInnerJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformInnerJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformInnerJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformJoinSwap.h
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2CrossProduct.h
            include/gpopt/xforms/CXformLeftSemiApplyIn2LeftSemiJoin.h
            include/gpopt/xforms/CXformLeftSemiApplyIn2LeftSemiJoinNoCorrelations.h
            include/gpopt/xforms/CXformLeftSemiApplyInWithExternalCorrs2InnerJoin.h
            include/gpopt/xforms/CXformPushGbBelowSetOp.h
            include/gpopt/xforms/CXformPushGbBelowUnion.h
            include/gpopt/xforms/CXformPushGbBelowUnionAll.h
            include/gpopt/xforms/CXformSelect2DynamicBitmapBoolOp.h
            include/gpopt/xforms/CXformSemiJoinAntiSemiJoinNotInSwap.h
            include/gpopt/xforms/CXformSemiJoinAntiSemiJoinSwap.h
            include/gpopt/xforms/CXformSemiJoinInnerJoinSwap.h
            include/gpopt/xforms/CXformSemiJoinSemiJoinSwap.h
            include/gpopt/xforms/CXformSimplifyProjectWithSubquery.h
            include/gpopt/xforms/CXformSimplifySelectWithSubquery.h
            include/gpopt/xforms/CXformSubqNAryJoin2Apply.h
            include/gpopt/xforms/CXformUtils.inl
            include/gpopt/xforms/xforms.h

            include/gpopt/base/CAutoOptCtxt.h
            src/base/CAutoOptCtxt.cpp
            include/gpopt/base/CColConstraintsArrayMapper.h
            src/base/CColConstraintsArrayMapper.cpp
            include/gpopt/base/CColConstraintsHashMapper.h
            src/base/CColConstraintsHashMapper.cpp
            include/gpopt/base/CColRef.h
            src/base/CColRef.cpp
            include/gpopt/base/CColRefComputed.h
            src/base/CColRefComputed.cpp
            include/gpopt/base/CColRefSet.h
            src/base/CColRefSet.cpp
            include/gpopt/base/CColRefSetIter.h
            src/base/CColRefSetIter.cpp
            include/gpopt/base/CColRefTable.h
            src/base/CColRefTable.cpp
            include/gpopt/base/CColumnFactory.h
            src/base/CColumnFactory.cpp
            include/gpopt/base/CConstraint.h
            src/base/CConstraint.cpp
            include/gpopt/base/CConstraintConjunction.h
            src/base/CConstraintConjunction.cpp
            include/gpopt/base/CConstraintDisjunction.h
            src/base/CConstraintDisjunction.cpp
            include/gpopt/base/CConstraintInterval.h
            src/base/CConstraintInterval.cpp
            include/gpopt/base/CConstraintNegation.h
            src/base/CConstraintNegation.cpp
            include/gpopt/base/CCostContext.h
            src/base/CCostContext.cpp
            include/gpopt/base/CCTEInfo.h
            src/base/CCTEInfo.cpp
            include/gpopt/base/CCTEMap.h
            src/base/CCTEMap.cpp
            include/gpopt/base/CCTEReq.h
            src/base/CCTEReq.cpp
            include/gpopt/base/CDefaultComparator.h
            src/base/CDefaultComparator.cpp
            include/gpopt/base/CDistributionSpecExternal.h
            src/base/CDistributionSpecExternal.cpp
            include/gpopt/base/CDistributionSpecHashed.h
            src/base/CDistributionSpecHashed.cpp
            include/gpopt/base/CDistributionSpecNonSingleton.h
            src/base/CDistributionSpecNonSingleton.cpp
            include/gpopt/base/CDistributionSpecRandom.h
            src/base/CDistributionSpecRandom.cpp
            include/gpopt/base/CDistributionSpecReplicated.h
            src/base/CDistributionSpecReplicated.cpp
            include/gpopt/base/CDistributionSpecRouted.h
            src/base/CDistributionSpecRouted.cpp
            include/gpopt/base/CDistributionSpecSingleton.h
            src/base/CDistributionSpecSingleton.cpp
            include/gpopt/base/CDistributionSpecStrictSingleton.h
            src/base/CDistributionSpecStrictSingleton.cpp
            include/gpopt/base/CDistributionSpecUniversal.h
            src/base/CDistributionSpecUniversal.cpp
            include/gpopt/base/CDrvdProp.h
            src/base/CDrvdProp.cpp
            include/gpopt/base/CDrvdPropCtxt.h
            src/base/CDrvdPropCtxt.cpp
            include/gpopt/base/CDrvdPropCtxtPlan.h
            src/base/CDrvdPropCtxtPlan.cpp
            include/gpopt/base/CDrvdPropPlan.h
            src/base/CDrvdPropPlan.cpp
            include/gpopt/base/CDrvdPropRelational.h
            src/base/CDrvdPropRelational.cpp
            include/gpopt/base/CDrvdPropScalar.h
            src/base/CDrvdPropScalar.cpp
            include/gpopt/base/CEnfdDistribution.h
            src/base/CEnfdDistribution.cpp
            include/gpopt/base/CEnfdOrder.h
            src/base/CEnfdOrder.cpp
            include/gpopt/base/CEnfdPartitionPropagation.h
            src/base/CEnfdPartitionPropagation.cpp
            include/gpopt/base/CEnfdProp.h
            src/base/CEnfdProp.cpp
            include/gpopt/base/CEnfdRewindability.h
            src/base/CEnfdRewindability.cpp
            include/gpopt/base/CFunctionalDependency.h
            src/base/CFunctionalDependency.cpp
            include/gpopt/base/CFunctionProp.h
            src/base/CFunctionProp.cpp
            include/gpopt/base/CIOUtils.h
            src/base/CIOUtils.cpp
            include/gpopt/base/CKeyCollection.h
            src/base/CKeyCollection.cpp
            include/gpopt/base/COptCtxt.h
            src/base/COptCtxt.cpp
            include/gpopt/base/COptimizationContext.h
            src/base/COptimizationContext.cpp
            include/gpopt/base/COrderSpec.h
            src/base/COrderSpec.cpp
            include/gpopt/base/CPartFilterMap.h
            src/base/CPartFilterMap.cpp
            include/gpopt/base/CPartIndexMap.h
            src/base/CPartIndexMap.cpp
            include/gpopt/base/CPartInfo.h
            src/base/CPartInfo.cpp
            include/gpopt/base/CPartitionPropagationSpec.h
            src/base/CPartitionPropagationSpec.cpp
            include/gpopt/base/CPartKeys.h
            src/base/CPartKeys.cpp
            include/gpopt/base/CPrintPrefix.h
            src/base/CPrintPrefix.cpp
            include/gpopt/base/CPropConstraint.h
            src/base/CPropConstraint.cpp
            include/gpopt/base/CQueryContext.h
            src/base/CQueryContext.cpp
            include/gpopt/base/CRange.h
            src/base/CRange.cpp
            include/gpopt/base/CReqdProp.h
            src/base/CReqdProp.cpp
            include/gpopt/base/CReqdPropPlan.h
            src/base/CReqdPropPlan.cpp
            include/gpopt/base/CReqdPropRelational.h
            src/base/CReqdPropRelational.cpp
            include/gpopt/base/CRewindabilitySpec.h
            src/base/CRewindabilitySpec.cpp
            include/gpopt/base/CUtils.h
            src/base/CUtils.cpp
            include/gpopt/base/CWindowFrame.h
            src/base/CWindowFrame.cpp
            include/gpopt/base/IColConstraintsMapper.h
            src/base/IColConstraintsMapper.cpp
            include/gpopt/engine/CEngine.h
            src/engine/CEngine.cpp
            include/gpopt/engine/CEnumeratorConfig.h
            src/engine/CEnumeratorConfig.cpp
            include/gpopt/engine/CPartialPlan.h
            src/engine/CPartialPlan.cpp
            include/gpopt/engine/CStatisticsConfig.h
            src/engine/CStatisticsConfig.cpp
            include/gpopt/eval/CConstExprEvaluatorDefault.h
            src/eval/CConstExprEvaluatorDefault.cpp
            include/gpopt/eval/CConstExprEvaluatorDXL.h
            src/eval/CConstExprEvaluatorDXL.cpp
            include/gpopt/exception.h
            src/exception.cpp
            include/gpopt/init.h
            src/init.cpp
            include/gpopt/mdcache/CMDAccessor.h
            src/mdcache/CMDAccessor.cpp
            include/gpopt/mdcache/CMDAccessorUtils.h
            src/mdcache/CMDAccessorUtils.cpp
            include/gpopt/mdcache/CMDCache.h
            src/mdcache/CMDCache.cpp
            include/gpopt/mdcache/CMDKey.h
            src/mdcache/CMDKey.cpp
            include/gpopt/metadata/CColumnDescriptor.h
            src/metadata/CColumnDescriptor.cpp
            include/gpopt/metadata/CIndexDescriptor.h
            src/metadata/CIndexDescriptor.cpp
            include/gpopt/metadata/CName.h
            src/metadata/CName.cpp
            include/gpopt/metadata/CPartConstraint.h
            src/metadata/CPartConstraint.cpp
            include/gpopt/metadata/CTableDescriptor.h
            src/metadata/CTableDescriptor.cpp
            include/gpopt/minidump/CDXLMinidump.h
            src/minidump/CDXLMinidump.cpp
            include/gpopt/minidump/CMetadataAccessorFactory.h
            src/minidump/CMetadataAccessorFactory.cpp
            include/gpopt/minidump/CMiniDumperDXL.h
            src/minidump/CMiniDumperDXL.cpp
            include/gpopt/minidump/CMinidumperUtils.h
            src/minidump/CMinidumperUtils.cpp
            include/gpopt/minidump/CSerializableMDAccessor.h
            src/minidump/CSerializableMDAccessor.cpp
            include/gpopt/minidump/CSerializableOptimizerConfig.h
            src/minidump/CSerializableOptimizerConfig.cpp
            include/gpopt/minidump/CSerializablePlan.h
            src/minidump/CSerializablePlan.cpp
            include/gpopt/minidump/CSerializableQuery.h
            src/minidump/CSerializableQuery.cpp
            include/gpopt/minidump/CSerializableStackTrace.h
            src/minidump/CSerializableStackTrace.cpp
            include/gpopt/operators/CCNFConverter.h
            src/operators/CCNFConverter.cpp
            include/gpopt/operators/CExpression.h
            src/operators/CExpression.cpp
            include/gpopt/operators/CExpressionFactorizer.h
            src/operators/CExpressionFactorizer.cpp
            include/gpopt/operators/CExpressionHandle.h
            src/operators/CExpressionHandle.cpp
            include/gpopt/operators/CExpressionPreprocessor.h
            src/operators/CExpressionPreprocessor.cpp
            include/gpopt/operators/CExpressionUtils.h
            src/operators/CExpressionUtils.cpp
            include/gpopt/operators/CLogical.h
            src/operators/CLogical.cpp
            include/gpopt/operators/CLogicalApply.h
            src/operators/CLogicalApply.cpp
            include/gpopt/operators/CLogicalAssert.h
            src/operators/CLogicalAssert.cpp
            include/gpopt/operators/CLogicalBitmapTableGet.h
            src/operators/CLogicalBitmapTableGet.cpp
            include/gpopt/operators/CLogicalConstTableGet.h
            src/operators/CLogicalConstTableGet.cpp
            include/gpopt/operators/CLogicalCTEAnchor.h
            src/operators/CLogicalCTEAnchor.cpp
            include/gpopt/operators/CLogicalCTEConsumer.h
            src/operators/CLogicalCTEConsumer.cpp
            include/gpopt/operators/CLogicalCTEProducer.h
            src/operators/CLogicalCTEProducer.cpp
            include/gpopt/operators/CLogicalDelete.h
            src/operators/CLogicalDelete.cpp
            include/gpopt/operators/CLogicalDifference.h
            src/operators/CLogicalDifference.cpp
            include/gpopt/operators/CLogicalDifferenceAll.h
            src/operators/CLogicalDifferenceAll.cpp
            include/gpopt/operators/CLogicalDML.h
            src/operators/CLogicalDML.cpp
            include/gpopt/operators/CLogicalDynamicBitmapTableGet.h
            src/operators/CLogicalDynamicBitmapTableGet.cpp
            include/gpopt/operators/CLogicalDynamicGet.h
            src/operators/CLogicalDynamicGet.cpp
            include/gpopt/operators/CLogicalDynamicGetBase.h
            src/operators/CLogicalDynamicGetBase.cpp
            include/gpopt/operators/CLogicalDynamicIndexGet.h
            src/operators/CLogicalDynamicIndexGet.cpp
            include/gpopt/operators/CLogicalExternalGet.h
            src/operators/CLogicalExternalGet.cpp
            include/gpopt/operators/CLogicalFullOuterJoin.h
            src/operators/CLogicalFullOuterJoin.cpp
            include/gpopt/operators/CLogicalGbAgg.h
            src/operators/CLogicalGbAgg.cpp
            include/gpopt/operators/CLogicalGbAggDeduplicate.h
            src/operators/CLogicalGbAggDeduplicate.cpp
            include/gpopt/operators/CLogicalGet.h
            src/operators/CLogicalGet.cpp
            include/gpopt/operators/CLogicalIndexGet.h
            src/operators/CLogicalIndexGet.cpp
            include/gpopt/operators/CLogicalInnerApply.h
            src/operators/CLogicalInnerApply.cpp
            include/gpopt/operators/CLogicalInnerCorrelatedApply.h
            src/operators/CLogicalInnerCorrelatedApply.cpp
            include/gpopt/operators/CLogicalInnerIndexApply.h
            src/operators/CLogicalInnerIndexApply.cpp
            include/gpopt/operators/CLogicalInnerJoin.h
            src/operators/CLogicalInnerJoin.cpp
            include/gpopt/operators/CLogicalInsert.h
            src/operators/CLogicalInsert.cpp
            include/gpopt/operators/CLogicalIntersect.h
            src/operators/CLogicalIntersect.cpp
            include/gpopt/operators/CLogicalIntersectAll.h
            src/operators/CLogicalIntersectAll.cpp
            include/gpopt/operators/CLogicalJoin.h
            src/operators/CLogicalJoin.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiApply.h
            src/operators/CLogicalLeftAntiSemiApply.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiApplyNotIn.h
            src/operators/CLogicalLeftAntiSemiApplyNotIn.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiCorrelatedApply.h
            src/operators/CLogicalLeftAntiSemiCorrelatedApply.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiCorrelatedApplyNotIn.h
            src/operators/CLogicalLeftAntiSemiCorrelatedApplyNotIn.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiJoin.h
            src/operators/CLogicalLeftAntiSemiJoin.cpp
            include/gpopt/operators/CLogicalLeftAntiSemiJoinNotIn.h
            src/operators/CLogicalLeftAntiSemiJoinNotIn.cpp
            include/gpopt/operators/CLogicalLeftOuterApply.h
            src/operators/CLogicalLeftOuterApply.cpp
            include/gpopt/operators/CLogicalLeftOuterCorrelatedApply.h
            src/operators/CLogicalLeftOuterCorrelatedApply.cpp
            include/gpopt/operators/CLogicalLeftOuterJoin.h
            src/operators/CLogicalLeftOuterJoin.cpp
            include/gpopt/operators/CLogicalLeftSemiApply.h
            src/operators/CLogicalLeftSemiApply.cpp
            include/gpopt/operators/CLogicalLeftSemiApplyIn.h
            src/operators/CLogicalLeftSemiApplyIn.cpp
            include/gpopt/operators/CLogicalLeftSemiCorrelatedApply.h
            src/operators/CLogicalLeftSemiCorrelatedApply.cpp
            include/gpopt/operators/CLogicalLeftSemiCorrelatedApplyIn.h
            src/operators/CLogicalLeftSemiCorrelatedApplyIn.cpp
            include/gpopt/operators/CLogicalLeftSemiJoin.h
            src/operators/CLogicalLeftSemiJoin.cpp
            include/gpopt/operators/CLogicalLimit.h
            src/operators/CLogicalLimit.cpp
            include/gpopt/operators/CLogicalMaxOneRow.h
            src/operators/CLogicalMaxOneRow.cpp
            include/gpopt/operators/CLogicalNAryJoin.h
            src/operators/CLogicalNAryJoin.cpp
            include/gpopt/operators/CLogicalPartitionSelector.h
            src/operators/CLogicalPartitionSelector.cpp
            include/gpopt/operators/CLogicalProject.h
            src/operators/CLogicalProject.cpp
            include/gpopt/operators/CLogicalRowTrigger.h
            src/operators/CLogicalRowTrigger.cpp
            include/gpopt/operators/CLogicalSelect.h
            src/operators/CLogicalSelect.cpp
            include/gpopt/operators/CLogicalSequence.h
            src/operators/CLogicalSequence.cpp
            include/gpopt/operators/CLogicalSequenceProject.h
            src/operators/CLogicalSequenceProject.cpp
            include/gpopt/operators/CLogicalSetOp.h
            src/operators/CLogicalSetOp.cpp
            include/gpopt/operators/CLogicalSplit.h
            src/operators/CLogicalSplit.cpp
            include/gpopt/operators/CLogicalTVF.h
            src/operators/CLogicalTVF.cpp
            include/gpopt/operators/CLogicalUnary.h
            src/operators/CLogicalUnary.cpp
            include/gpopt/operators/CLogicalUnion.h
            src/operators/CLogicalUnion.cpp
            include/gpopt/operators/CLogicalUnionAll.h
            src/operators/CLogicalUnionAll.cpp
            include/gpopt/operators/CLogicalUpdate.h
            src/operators/CLogicalUpdate.cpp
            include/gpopt/operators/CNormalizer.h
            src/operators/CNormalizer.cpp
            include/gpopt/operators/COperator.h
            src/operators/COperator.cpp
            include/gpopt/operators/CPattern.h
            src/operators/CPattern.cpp
            include/gpopt/operators/CPhysical.h
            src/operators/CPhysical.cpp
            include/gpopt/operators/CPhysicalAgg.h
            src/operators/CPhysicalAgg.cpp
            include/gpopt/operators/CPhysicalAssert.h
            src/operators/CPhysicalAssert.cpp
            include/gpopt/operators/CPhysicalBitmapTableScan.h
            src/operators/CPhysicalBitmapTableScan.cpp
            include/gpopt/operators/CPhysicalComputeScalar.h
            src/operators/CPhysicalComputeScalar.cpp
            include/gpopt/operators/CPhysicalConstTableGet.h
            src/operators/CPhysicalConstTableGet.cpp
            include/gpopt/operators/CPhysicalCTEConsumer.h
            src/operators/CPhysicalCTEConsumer.cpp
            include/gpopt/operators/CPhysicalCTEProducer.h
            src/operators/CPhysicalCTEProducer.cpp
            include/gpopt/operators/CPhysicalDML.h
            src/operators/CPhysicalDML.cpp
            include/gpopt/operators/CPhysicalDynamicBitmapTableScan.h
            src/operators/CPhysicalDynamicBitmapTableScan.cpp
            include/gpopt/operators/CPhysicalDynamicIndexScan.h
            src/operators/CPhysicalDynamicIndexScan.cpp
            include/gpopt/operators/CPhysicalDynamicScan.h
            src/operators/CPhysicalDynamicScan.cpp
            include/gpopt/operators/CPhysicalDynamicTableScan.h
            src/operators/CPhysicalDynamicTableScan.cpp
            include/gpopt/operators/CPhysicalExternalScan.h
            src/operators/CPhysicalExternalScan.cpp
            include/gpopt/operators/CPhysicalFilter.h
            src/operators/CPhysicalFilter.cpp
            include/gpopt/operators/CPhysicalHashAgg.h
            src/operators/CPhysicalHashAgg.cpp
            include/gpopt/operators/CPhysicalHashAggDeduplicate.h
            src/operators/CPhysicalHashAggDeduplicate.cpp
            include/gpopt/operators/CPhysicalHashJoin.h
            src/operators/CPhysicalHashJoin.cpp
            include/gpopt/operators/CPhysicalIndexScan.h
            src/operators/CPhysicalIndexScan.cpp
            include/gpopt/operators/CPhysicalInnerHashJoin.h
            src/operators/CPhysicalInnerHashJoin.cpp
            include/gpopt/operators/CPhysicalInnerIndexNLJoin.h
            src/operators/CPhysicalInnerIndexNLJoin.cpp
            include/gpopt/operators/CPhysicalInnerNLJoin.h
            src/operators/CPhysicalInnerNLJoin.cpp
            include/gpopt/operators/CPhysicalJoin.h
            src/operators/CPhysicalJoin.cpp
            include/gpopt/operators/CPhysicalLeftAntiSemiHashJoin.h
            src/operators/CPhysicalLeftAntiSemiHashJoin.cpp
            include/gpopt/operators/CPhysicalLeftAntiSemiHashJoinNotIn.h
            src/operators/CPhysicalLeftAntiSemiHashJoinNotIn.cpp
            include/gpopt/operators/CPhysicalLeftAntiSemiNLJoin.h
            src/operators/CPhysicalLeftAntiSemiNLJoin.cpp
            include/gpopt/operators/CPhysicalLeftOuterHashJoin.h
            src/operators/CPhysicalLeftOuterHashJoin.cpp
            include/gpopt/operators/CPhysicalLeftOuterNLJoin.h
            src/operators/CPhysicalLeftOuterNLJoin.cpp
            include/gpopt/operators/CPhysicalLeftSemiHashJoin.h
            src/operators/CPhysicalLeftSemiHashJoin.cpp
            include/gpopt/operators/CPhysicalLeftSemiNLJoin.h
            src/operators/CPhysicalLeftSemiNLJoin.cpp
            include/gpopt/operators/CPhysicalLimit.h
            src/operators/CPhysicalLimit.cpp
            include/gpopt/operators/CPhysicalMotion.h
            src/operators/CPhysicalMotion.cpp
            include/gpopt/operators/CPhysicalMotionBroadcast.h
            src/operators/CPhysicalMotionBroadcast.cpp
            include/gpopt/operators/CPhysicalMotionGather.h
            src/operators/CPhysicalMotionGather.cpp
            include/gpopt/operators/CPhysicalMotionHashDistribute.h
            src/operators/CPhysicalMotionHashDistribute.cpp
            include/gpopt/operators/CPhysicalMotionRandom.h
            src/operators/CPhysicalMotionRandom.cpp
            include/gpopt/operators/CPhysicalMotionRoutedDistribute.h
            src/operators/CPhysicalMotionRoutedDistribute.cpp
            include/gpopt/operators/CPhysicalNLJoin.h
            src/operators/CPhysicalNLJoin.cpp
            include/gpopt/operators/CPhysicalPartitionSelector.h
            src/operators/CPhysicalPartitionSelector.cpp
            include/gpopt/operators/CPhysicalPartitionSelectorDML.h
            src/operators/CPhysicalPartitionSelectorDML.cpp
            include/gpopt/operators/CPhysicalRowTrigger.h
            src/operators/CPhysicalRowTrigger.cpp
            include/gpopt/operators/CPhysicalScalarAgg.h
            src/operators/CPhysicalScalarAgg.cpp
            include/gpopt/operators/CPhysicalScan.h
            src/operators/CPhysicalScan.cpp
            include/gpopt/operators/CPhysicalSequence.h
            src/operators/CPhysicalSequence.cpp
            include/gpopt/operators/CPhysicalSequenceProject.h
            src/operators/CPhysicalSequenceProject.cpp
            include/gpopt/operators/CPhysicalSort.h
            src/operators/CPhysicalSort.cpp
            include/gpopt/operators/CPhysicalSplit.h
            src/operators/CPhysicalSplit.cpp
            include/gpopt/operators/CPhysicalSpool.h
            src/operators/CPhysicalSpool.cpp
            include/gpopt/operators/CPhysicalStreamAgg.h
            src/operators/CPhysicalStreamAgg.cpp
            include/gpopt/operators/CPhysicalStreamAggDeduplicate.h
            src/operators/CPhysicalStreamAggDeduplicate.cpp
            include/gpopt/operators/CPhysicalTableScan.h
            src/operators/CPhysicalTableScan.cpp
            include/gpopt/operators/CPhysicalTVF.h
            src/operators/CPhysicalTVF.cpp
            include/gpopt/operators/CPhysicalUnionAll.h
            src/operators/CPhysicalUnionAll.cpp
            include/gpopt/operators/CPhysicalSerialUnionAll.h
            src/operators/CPhysicalSerialUnionAll.cpp
            include/gpopt/operators/CPredicateUtils.h
            src/operators/CPredicateUtils.cpp
            include/gpopt/operators/CScalar.h
            src/operators/CScalar.cpp
            include/gpopt/operators/CScalarAggFunc.h
            src/operators/CScalarAggFunc.cpp
            include/gpopt/operators/CScalarArray.h
            src/operators/CScalarArray.cpp
            include/gpopt/operators/CScalarArrayCmp.h
            src/operators/CScalarArrayCmp.cpp
            include/gpopt/operators/CScalarArrayRef.h
            src/operators/CScalarArrayRef.cpp
            include/gpopt/operators/CScalarArrayRefIndexList.h
            src/operators/CScalarArrayRefIndexList.cpp
            include/gpopt/operators/CScalarAssertConstraint.h
            src/operators/CScalarAssertConstraint.cpp
            include/gpopt/operators/CScalarAssertConstraintList.h
            src/operators/CScalarAssertConstraintList.cpp
            include/gpopt/operators/CScalarBitmapBoolOp.h
            src/operators/CScalarBitmapBoolOp.cpp
            include/gpopt/operators/CScalarBitmapIndexProbe.h
            src/operators/CScalarBitmapIndexProbe.cpp
            include/gpopt/operators/CScalarBooleanTest.h
            src/operators/CScalarBooleanTest.cpp
            include/gpopt/operators/CScalarBoolOp.h
            src/operators/CScalarBoolOp.cpp
            include/gpopt/operators/CScalarCaseTest.h
            src/operators/CScalarCaseTest.cpp
            include/gpopt/operators/CScalarCast.h
            src/operators/CScalarCast.cpp
            include/gpopt/operators/CScalarCmp.h
            src/operators/CScalarCmp.cpp
            include/gpopt/operators/CScalarCoalesce.h
            src/operators/CScalarCoalesce.cpp
            include/gpopt/operators/CScalarCoerceBase.h
            src/operators/CScalarCoerceBase.cpp
            include/gpopt/operators/CScalarCoerceToDomain.h
            src/operators/CScalarCoerceToDomain.cpp
            include/gpopt/operators/CScalarCoerceViaIO.h
            src/operators/CScalarCoerceViaIO.cpp
            include/gpopt/operators/CScalarArrayCoerceExpr.h
            src/operators/CScalarArrayCoerceExpr.cpp
            include/gpopt/operators/CScalarConst.h
            src/operators/CScalarConst.cpp
            include/gpopt/operators/CScalarDMLAction.h
            src/operators/CScalarDMLAction.cpp
            include/gpopt/operators/CScalarFunc.h
            src/operators/CScalarFunc.cpp
            include/gpopt/operators/CScalarIdent.h
            src/operators/CScalarIdent.cpp
            include/gpopt/operators/CScalarIf.h
            src/operators/CScalarIf.cpp
            include/gpopt/operators/CScalarMinMax.h
            src/operators/CScalarMinMax.cpp
            include/gpopt/operators/CScalarNullIf.h
            src/operators/CScalarNullIf.cpp
            include/gpopt/operators/CScalarNullTest.h
            src/operators/CScalarNullTest.cpp
            include/gpopt/operators/CScalarOp.h
            src/operators/CScalarOp.cpp
            include/gpopt/operators/CScalarProjectElement.h
            src/operators/CScalarProjectElement.cpp
            include/gpopt/operators/CScalarProjectList.h
            src/operators/CScalarProjectList.cpp
            include/gpopt/operators/CScalarSubquery.h
            src/operators/CScalarSubquery.cpp
            include/gpopt/operators/CScalarSubqueryAll.h
            src/operators/CScalarSubqueryAll.cpp
            include/gpopt/operators/CScalarSubqueryAny.h
            src/operators/CScalarSubqueryAny.cpp
            include/gpopt/operators/CScalarSubqueryExistential.h
            src/operators/CScalarSubqueryExistential.cpp
            include/gpopt/operators/CScalarSubqueryQuantified.h
            src/operators/CScalarSubqueryQuantified.cpp
            include/gpopt/operators/CScalarSwitch.h
            src/operators/CScalarSwitch.cpp
            include/gpopt/operators/CScalarSwitchCase.h
            src/operators/CScalarSwitchCase.cpp
            include/gpopt/operators/CScalarWindowFunc.h
            src/operators/CScalarWindowFunc.cpp
            include/gpopt/operators/CWindowPreprocessor.h
            src/operators/CWindowPreprocessor.cpp
            include/gpopt/optimizer/COptimizer.h
            src/optimizer/COptimizer.cpp
            include/gpopt/optimizer/COptimizerConfig.h
            src/optimizer/COptimizerConfig.cpp
            include/gpopt/search/CBinding.h
            src/search/CBinding.cpp
            include/gpopt/search/CGroup.h
            src/search/CGroup.cpp
            include/gpopt/search/CGroupExpression.h
            src/search/CGroupExpression.cpp
            include/gpopt/search/CGroupProxy.h
            src/search/CGroupProxy.cpp
            include/gpopt/search/CJob.h
            src/search/CJob.cpp
            include/gpopt/search/CJobFactory.h
            src/search/CJobFactory.cpp
            include/gpopt/search/CJobGroup.h
            src/search/CJobGroup.cpp
            include/gpopt/search/CJobGroupExploration.h
            src/search/CJobGroupExploration.cpp
            include/gpopt/search/CJobGroupExpression.h
            src/search/CJobGroupExpression.cpp
            include/gpopt/search/CJobGroupExpressionExploration.h
            src/search/CJobGroupExpressionExploration.cpp
            include/gpopt/search/CJobGroupExpressionImplementation.h
            src/search/CJobGroupExpressionImplementation.cpp
            include/gpopt/search/CJobGroupExpressionOptimization.h
            src/search/CJobGroupExpressionOptimization.cpp
            include/gpopt/search/CJobGroupImplementation.h
            src/search/CJobGroupImplementation.cpp
            include/gpopt/search/CJobGroupOptimization.h
            src/search/CJobGroupOptimization.cpp
            include/gpopt/search/CJobQueue.h
            src/search/CJobQueue.cpp
            include/gpopt/search/CJobTest.h
            src/search/CJobTest.cpp
            include/gpopt/search/CJobTransformation.h
            src/search/CJobTransformation.cpp
            include/gpopt/search/CMemo.h
            src/search/CMemo.cpp
            include/gpopt/search/CScheduler.h
            src/search/CScheduler.cpp
            include/gpopt/search/CSchedulerContext.h
            src/search/CSchedulerContext.cpp
            include/gpopt/search/CSearchStage.h
            src/search/CSearchStage.cpp
            include/gpopt/translate/CTranslatorDXLToExpr.h
            src/translate/CTranslatorDXLToExpr.cpp
            include/gpopt/translate/CTranslatorDXLToExprUtils.h
            src/translate/CTranslatorDXLToExprUtils.cpp
            include/gpopt/translate/CTranslatorExprToDXL.h
            src/translate/CTranslatorExprToDXL.cpp
            include/gpopt/translate/CTranslatorExprToDXLUtils.h
            src/translate/CTranslatorExprToDXLUtils.cpp
            include/gpopt/xforms/CDecorrelator.h
            src/xforms/CDecorrelator.cpp
            include/gpopt/xforms/CJoinOrder.h
            src/xforms/CJoinOrder.cpp
            include/gpopt/xforms/CJoinOrderDP.h
            src/xforms/CJoinOrderDP.cpp
            include/gpopt/xforms/CJoinOrderMinCard.h
            src/xforms/CJoinOrderMinCard.cpp
            include/gpopt/xforms/CSubqueryHandler.h
            src/xforms/CSubqueryHandler.cpp
            include/gpopt/xforms/CXform.h
            src/xforms/CXform.cpp
            include/gpopt/xforms/CXformCollapseGbAgg.h
            src/xforms/CXformCollapseGbAgg.cpp
            include/gpopt/xforms/CXformCollapseProject.h
            src/xforms/CXformCollapseProject.cpp
            include/gpopt/xforms/CXformCTEAnchor2Sequence.h
            src/xforms/CXformCTEAnchor2Sequence.cpp
            include/gpopt/xforms/CXformCTEAnchor2TrivialSelect.h
            src/xforms/CXformCTEAnchor2TrivialSelect.cpp
            include/gpopt/xforms/CXformDelete2DML.h
            src/xforms/CXformDelete2DML.cpp
            include/gpopt/xforms/CXformDifference2LeftAntiSemiJoin.h
            src/xforms/CXformDifference2LeftAntiSemiJoin.cpp
            include/gpopt/xforms/CXformDifferenceAll2LeftAntiSemiJoin.h
            src/xforms/CXformDifferenceAll2LeftAntiSemiJoin.cpp
            include/gpopt/xforms/CXformDynamicGet2DynamicTableScan.h
            src/xforms/CXformDynamicGet2DynamicTableScan.cpp
            include/gpopt/xforms/CXformDynamicIndexGet2DynamicIndexScan.h
            src/xforms/CXformDynamicIndexGet2DynamicIndexScan.cpp
            include/gpopt/xforms/CXformExpandFullOuterJoin.h
            src/xforms/CXformExpandFullOuterJoin.cpp
            include/gpopt/xforms/CXformExpandNAryJoin.h
            src/xforms/CXformExpandNAryJoin.cpp
            include/gpopt/xforms/CXformExpandNAryJoinDP.h
            src/xforms/CXformExpandNAryJoinDP.cpp
            include/gpopt/xforms/CXformExpandNAryJoinMinCard.h
            src/xforms/CXformExpandNAryJoinMinCard.cpp
            include/gpopt/xforms/CXformExploration.h
            src/xforms/CXformExploration.cpp
            include/gpopt/xforms/CXformExternalGet2ExternalScan.h
            src/xforms/CXformExternalGet2ExternalScan.cpp
            include/gpopt/xforms/CXformFactory.h
            src/xforms/CXformFactory.cpp
            include/gpopt/xforms/CXformGbAgg2Apply.h
            src/xforms/CXformGbAgg2Apply.cpp
            include/gpopt/xforms/CXformGbAgg2HashAgg.h
            src/xforms/CXformGbAgg2HashAgg.cpp
            include/gpopt/xforms/CXformGbAgg2ScalarAgg.h
            src/xforms/CXformGbAgg2ScalarAgg.cpp
            include/gpopt/xforms/CXformGbAgg2StreamAgg.h
            src/xforms/CXformGbAgg2StreamAgg.cpp
            include/gpopt/xforms/CXformGbAggDedup2HashAggDedup.h
            src/xforms/CXformGbAggDedup2HashAggDedup.cpp
            include/gpopt/xforms/CXformGbAggDedup2StreamAggDedup.h
            src/xforms/CXformGbAggDedup2StreamAggDedup.cpp
            include/gpopt/xforms/CXformGbAggWithMDQA2Join.h
            src/xforms/CXformGbAggWithMDQA2Join.cpp
            include/gpopt/xforms/CXformGet2TableScan.h
            src/xforms/CXformGet2TableScan.cpp
            include/gpopt/xforms/CXformImplementAssert.h
            src/xforms/CXformImplementAssert.cpp
            include/gpopt/xforms/CXformImplementation.h
            src/xforms/CXformImplementation.cpp
            include/gpopt/xforms/CXformImplementBitmapTableGet.h
            src/xforms/CXformImplementBitmapTableGet.cpp
            include/gpopt/xforms/CXformImplementConstTableGet.h
            src/xforms/CXformImplementConstTableGet.cpp
            include/gpopt/xforms/CXformImplementCTEConsumer.h
            src/xforms/CXformImplementCTEConsumer.cpp
            include/gpopt/xforms/CXformImplementCTEProducer.h
            src/xforms/CXformImplementCTEProducer.cpp
            include/gpopt/xforms/CXformImplementDML.h
            src/xforms/CXformImplementDML.cpp
            include/gpopt/xforms/CXformImplementDynamicBitmapTableGet.h
            src/xforms/CXformImplementDynamicBitmapTableGet.cpp
            include/gpopt/xforms/CXformImplementInnerIndexApply.h
            src/xforms/CXformImplementInnerIndexApply.cpp
            include/gpopt/xforms/CXformImplementLimit.h
            src/xforms/CXformImplementLimit.cpp
            include/gpopt/xforms/CXformImplementPartitionSelector.h
            src/xforms/CXformImplementPartitionSelector.cpp
            include/gpopt/xforms/CXformImplementRowTrigger.h
            src/xforms/CXformImplementRowTrigger.cpp
            include/gpopt/xforms/CXformImplementSequence.h
            src/xforms/CXformImplementSequence.cpp
            include/gpopt/xforms/CXformImplementSequenceProject.h
            src/xforms/CXformImplementSequenceProject.cpp
            include/gpopt/xforms/CXformImplementSplit.h
            src/xforms/CXformImplementSplit.cpp
            include/gpopt/xforms/CXformImplementTVF.h
            src/xforms/CXformImplementTVF.cpp
            include/gpopt/xforms/CXformImplementTVFNoArgs.h
            src/xforms/CXformImplementTVFNoArgs.cpp
            include/gpopt/xforms/CXformImplementUnionAll.h
            src/xforms/CXformImplementUnionAll.cpp
            include/gpopt/xforms/CXformIndexGet2IndexScan.h
            src/xforms/CXformIndexGet2IndexScan.cpp
            include/gpopt/xforms/CXformInlineCTEConsumer.h
            src/xforms/CXformInlineCTEConsumer.cpp
            include/gpopt/xforms/CXformInlineCTEConsumerUnderSelect.h
            src/xforms/CXformInlineCTEConsumerUnderSelect.cpp
            include/gpopt/xforms/CXformInnerApply2InnerJoin.h
            src/xforms/CXformInnerApply2InnerJoin.cpp
            include/gpopt/xforms/CXformInnerApply2InnerJoinNoCorrelations.h
            src/xforms/CXformInnerApply2InnerJoinNoCorrelations.cpp
            include/gpopt/xforms/CXformInnerApplyWithOuterKey2InnerJoin.h
            src/xforms/CXformInnerApplyWithOuterKey2InnerJoin.cpp
            include/gpopt/xforms/CXformInnerJoin2BitmapIndexGetApply.h
            src/xforms/CXformInnerJoin2BitmapIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoin2DynamicBitmapIndexGetApply.h
            src/xforms/CXformInnerJoin2DynamicBitmapIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoin2DynamicIndexGetApply.h
            src/xforms/CXformInnerJoin2DynamicIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoin2HashJoin.h
            src/xforms/CXformInnerJoin2HashJoin.cpp
            include/gpopt/xforms/CXformInnerJoin2IndexApply.h
            src/xforms/CXformInnerJoin2IndexApply.cpp
            include/gpopt/xforms/CXformInnerJoin2IndexGetApply.h
            src/xforms/CXformInnerJoin2IndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoin2NLJoin.h
            src/xforms/CXformInnerJoin2NLJoin.cpp
            include/gpopt/xforms/CXformInnerJoin2PartialDynamicIndexGetApply.h
            src/xforms/CXformInnerJoin2PartialDynamicIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2BitmapIndexGetApply.h
            src/xforms/CXformInnerJoinWithInnerSelect2BitmapIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2DynamicBitmapIndexGetApply.h
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicBitmapIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2DynamicIndexGetApply.h
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicIndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2IndexGetApply.h
            src/xforms/CXformInnerJoinWithInnerSelect2IndexGetApply.cpp
            include/gpopt/xforms/CXformInnerJoinWithInnerSelect2PartialDynamicIndexGetApply.h
            src/xforms/CXformInnerJoinWithInnerSelect2PartialDynamicIndexGetApply.cpp
            include/gpopt/xforms/CXformInsert2DML.h
            src/xforms/CXformInsert2DML.cpp
            include/gpopt/xforms/CXformIntersect2Join.h
            src/xforms/CXformIntersect2Join.cpp
            include/gpopt/xforms/CXformIntersectAll2LeftSemiJoin.h
            src/xforms/CXformIntersectAll2LeftSemiJoin.cpp
            include/gpopt/xforms/CXformJoinAssociativity.h
            src/xforms/CXformJoinAssociativity.cpp
            include/gpopt/xforms/CXformJoinCommutativity.h
            src/xforms/CXformJoinCommutativity.cpp
            include/gpopt/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoin.h
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoin.cpp
            include/gpopt/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoinNoCorrelations.h
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoinNoCorrelations.cpp
            include/gpopt/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotIn.h
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotIn.cpp
            include/gpopt/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotInNoCorrelations.h
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotInNoCorrelations.cpp
            include/gpopt/xforms/CXformLeftAntiSemiJoin2CrossProduct.h
            src/xforms/CXformLeftAntiSemiJoin2CrossProduct.cpp
            include/gpopt/xforms/CXformLeftAntiSemiJoin2HashJoin.h
            src/xforms/CXformLeftAntiSemiJoin2HashJoin.cpp
            include/gpopt/xforms/CXformLeftAntiSemiJoin2NLJoin.h
            src/xforms/CXformLeftAntiSemiJoin2NLJoin.cpp
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2HashJoinNotIn.h
            src/xforms/CXformLeftAntiSemiJoinNotIn2HashJoinNotIn.cpp
            include/gpopt/xforms/CXformLeftAntiSemiJoinNotIn2NLJoinNotIn.h
            src/xforms/CXformLeftAntiSemiJoinNotIn2NLJoinNotIn.cpp
            include/gpopt/xforms/CXformLeftOuter2InnerUnionAllLeftAntiSemiJoin.h
            src/xforms/CXformLeftOuter2InnerUnionAllLeftAntiSemiJoin.cpp
            include/gpopt/xforms/CXformLeftOuterApply2LeftOuterJoin.h
            src/xforms/CXformLeftOuterApply2LeftOuterJoin.cpp
            include/gpopt/xforms/CXformLeftOuterApply2LeftOuterJoinNoCorrelations.h
            src/xforms/CXformLeftOuterApply2LeftOuterJoinNoCorrelations.cpp
            include/gpopt/xforms/CXformLeftOuterJoin2HashJoin.h
            src/xforms/CXformLeftOuterJoin2HashJoin.cpp
            include/gpopt/xforms/CXformLeftOuterJoin2NLJoin.h
            src/xforms/CXformLeftOuterJoin2NLJoin.cpp
            include/gpopt/xforms/CXformLeftSemiApply2LeftSemiJoin.h
            src/xforms/CXformLeftSemiApply2LeftSemiJoin.cpp
            include/gpopt/xforms/CXformLeftSemiApply2LeftSemiJoinNoCorrelations.h
            src/xforms/CXformLeftSemiApply2LeftSemiJoinNoCorrelations.cpp
            include/gpopt/xforms/CXformLeftSemiApplyWithExternalCorrs2InnerJoin.h
            src/xforms/CXformLeftSemiApplyWithExternalCorrs2InnerJoin.cpp
            include/gpopt/xforms/CXformLeftSemiJoin2CrossProduct.h
            src/xforms/CXformLeftSemiJoin2CrossProduct.cpp
            include/gpopt/xforms/CXformLeftSemiJoin2HashJoin.h
            src/xforms/CXformLeftSemiJoin2HashJoin.cpp
            include/gpopt/xforms/CXformLeftSemiJoin2InnerJoin.h
            src/xforms/CXformLeftSemiJoin2InnerJoin.cpp
            include/gpopt/xforms/CXformLeftSemiJoin2InnerJoinUnderGb.h
            src/xforms/CXformLeftSemiJoin2InnerJoinUnderGb.cpp
            include/gpopt/xforms/CXformLeftSemiJoin2NLJoin.h
            src/xforms/CXformLeftSemiJoin2NLJoin.cpp
            include/gpopt/xforms/CXformMaxOneRow2Assert.h
            src/xforms/CXformMaxOneRow2Assert.cpp
            include/gpopt/xforms/CXformProject2Apply.h
            src/xforms/CXformProject2Apply.cpp
            include/gpopt/xforms/CXformProject2ComputeScalar.h
            src/xforms/CXformProject2ComputeScalar.cpp
            include/gpopt/xforms/CXformPushDownLeftOuterJoin.h
            src/xforms/CXformPushDownLeftOuterJoin.cpp
            include/gpopt/xforms/CXformPushGbBelowJoin.h
            src/xforms/CXformPushGbBelowJoin.cpp
            include/gpopt/xforms/CXformPushGbDedupBelowJoin.h
            src/xforms/CXformPushGbDedupBelowJoin.cpp
            include/gpopt/xforms/CXformPushGbWithHavingBelowJoin.h
            src/xforms/CXformPushGbWithHavingBelowJoin.cpp
            include/gpopt/xforms/CXformResult.h
            src/xforms/CXformResult.cpp
            include/gpopt/xforms/CXformSelect2Apply.h
            src/xforms/CXformSelect2Apply.cpp
            include/gpopt/xforms/CXformSelect2BitmapBoolOp.h
            src/xforms/CXformSelect2BitmapBoolOp.cpp
            src/xforms/CxformSelect2DynamicBitmapBoolOp.cpp
            include/gpopt/xforms/CXformSelect2DynamicIndexGet.h
            src/xforms/CXformSelect2DynamicIndexGet.cpp
            include/gpopt/xforms/CXformSelect2Filter.h
            src/xforms/CXformSelect2Filter.cpp
            include/gpopt/xforms/CXformSelect2IndexGet.h
            src/xforms/CXformSelect2IndexGet.cpp
            include/gpopt/xforms/CXformSelect2PartialDynamicIndexGet.h
            src/xforms/CXformSelect2PartialDynamicIndexGet.cpp
            include/gpopt/xforms/CXformSequenceProject2Apply.h
            src/xforms/CXformSequenceProject2Apply.cpp
            include/gpopt/xforms/CXformSimplifyGbAgg.h
            src/xforms/CXformSimplifyGbAgg.cpp
            include/gpopt/xforms/CXformSimplifyLeftOuterJoin.h
            src/xforms/CXformSimplifyLeftOuterJoin.cpp
            include/gpopt/xforms/CXformSimplifySubquery.h
            src/xforms/CXformSimplifySubquery.cpp
            include/gpopt/xforms/CXformSplitDQA.h
            src/xforms/CXformSplitDQA.cpp
            include/gpopt/xforms/CXformSplitGbAgg.h
            src/xforms/CXformSplitGbAgg.cpp
            include/gpopt/xforms/CXformSplitGbAggDedup.h
            src/xforms/CXformSplitGbAggDedup.cpp
            include/gpopt/xforms/CXformSplitLimit.h
            src/xforms/CXformSplitLimit.cpp
            include/gpopt/xforms/CXformSubqJoin2Apply.h
            src/xforms/CXformSubqJoin2Apply.cpp
            include/gpopt/xforms/CXformSubqueryUnnest.h
            src/xforms/CXformSubqueryUnnest.cpp
            include/gpopt/xforms/CXformUnion2UnionAll.h
            src/xforms/CXformUnion2UnionAll.cpp
            include/gpopt/xforms/CXformUnnestTVF.h
            src/xforms/CXformUnnestTVF.cpp
            include/gpopt/xforms/CXformUpdate2DML.h
            src/xforms/CXformUpdate2DML.cpp
            include/gpopt/xforms/CXformUtils.h
            src/xforms/CXformUtils.cpp
            include/gpopt/operators/CPhysicalUnionAllFactory.h
            src/operators/CPhysicalUnionAllFactory.cpp
            include/gpopt/operators/CHashedDistributions.h
            src/operators/CHashedDistributions.cpp
            include/gpopt/operators/CStrictHashedDistributions.h
            src/operators/CStrictHashedDistributions.cpp
            include/gpopt/operators/CPhysicalParallelUnionAll.h
            src/operators/CPhysicalParallelUnionAll.cpp
            include/gpopt/base/CDistributionSpecStrictHashed.h
            src/base/CDistributionSpecStrictHashed.cpp
            include/gpopt/base/CDatumSortedSet.h
            src/base/CDatumSortedSet.cpp
            include/gpopt/base/CDistributionSpecHashedNoOp.h
            src/base/CDistributionSpecHashedNoOp.cpp
            include/gpopt/base/CDistributionSpecStrictRandom.h
            src/base/CDistributionSpecStrictRandom.cpp
            )

target_link_libraries(gpopt
                      gpdbcost
                      naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      gpos
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

set_target_properties(gpopt PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS gpopt DESTINATION lib)
install(DIRECTORY include/gpopt DESTINATION include)
install(FILES "${PROJECT_BINARY_DIR}/libgpopt/include/libgpopt/version.h"
        DESTINATION include/gpopt)
